# reddit

./: .dockerignore  .env.example  .gitignore  20260308_012056_upfluence_influencers.csv  20260308_012350_upfluence_influencers.csv  20260308_012628_upfluence_influencers.csv  20260308_012831_upfluence_influencers.csv  Dockerfile  Dockerfile.tor  IKTECH_EMAIL_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  JIRA_FILES_OVERVIEW.txt  JIRA_MIGRATION_NOTES.md  JIRA_ORGANIZATION_SUMMARY.md  JIRA_SETUP.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  README_JIRA.md  Snak Specification V11.txt  Snakker Build Discovery - Knowledgebase.csv  TABLE_FORMATTING_README.md  UPFLUENCE_README.md  all.json  all_minimal.json  all_optimal.json  all_optimized.json  all_simplified.json  all_working.json  auto_browser_proxy.sh  check_domain_email.py  check_opencv.py  client.sh  clockify_dedup_entries.py  comprehensive_work_summary.sh  config-docker.yaml  config.yaml  connect_remote_browser.sh  csvread.py  deel_billable_hours.py  (+61 more)
design/: find_remote_junior_designer_jobs.py
design/results/: remote_junior_designer_jobs_20251215_095137.md  remote_junior_designer_jobs_20251215_112141.md  remote_junior_designer_jobs_20251215_112753.md
myapp/: __init__.py  app.py  config.py  endpoints.py
sql/: seed_products.sql
tor/: tor-entrypoint.sh  torrc
work_summary/: CHANGELOG.md  README.md  __init__.py  __main__.py  cli.py  config.py  models.py
work_summary/collectors/: __init__.py  base.py  github.py  gitlab.py  jira.py  shortcut.py
work_summary/formatters/: __init__.py  base.py  csv.py  json.py  table.py
(+5 files in other folders)
